# cigmar

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Doxyfile  InplaceUnaryFunction.hpp  README.md  String.hpp  cigmar.cbp  cigmar.depend  cigmar.layout  init.hpp  interfaces.hpp  main.cpp  numbers.hpp  primitive_classes.hpp  primitive_symbols.hpp  primitive_types.hpp  unittests.hpp  utils.cpp  utils.hpp
.codeblocks/: cigmar.cbp
.travis/: travis_install_cmake.sh
cigmar/: String.hpp  base64.hpp  cigmar.cpp  config.hpp  filesystem.hpp  hex.hpp  init.hpp  numbers.hpp  print.hpp  symbols.hpp  unittests.cpp  unittests.hpp  utils.cpp  utils.hpp  whirlpool.hpp
cigmar/classes/: ArrayList.hpp  CString.hpp  Exception.hpp  HashMap.hpp  HashSet.hpp  Path.hpp  Queue.hpp  Stack.hpp  String.hpp  StringView.hpp  TreeMap.hpp  TreeSet.hpp  array_t.hpp
cigmar/interfaces/: Comparable.hpp  CrossComparable.hpp  Hashable.hpp  Streamable.hpp
cigmar/primitive/: classes.hpp  interfaces.hpp  symbols.hpp  types.hpp  utils.hpp
cigmar/primitive/classes/: ArrayList.hpp  HashMap.hpp  HashSet.hpp  Queue.hpp  Stack.hpp  Timer.hpp  TreeMap.hpp  TreeSet.hpp  array_t.hpp
cigmar/primitive/types/: pos_t.hpp  return_t.hpp
cigmar/types/: pos_t.hpp  return_t.hpp
cigmar/utils/: Hasher.hpp
cpp/: cigmar.cpp  filesystem.cpp  filesystem_unix.inc  filesystem_windows.inc  unittests.cpp  whirlpool.cpp
libraries/: README.md
libraries/whirlpool/: nessie.h
primitive/: classes.hpp  interfaces.hpp  symbols.hpp  types.hpp  utils.hpp
primitive/classes/: ArrayList.hpp  HashMap.hpp  HashSet.hpp  Queue.hpp  Stack.hpp  TreeMap.hpp  TreeSet.hpp  array_t.hpp  chains.hpp
primitive/interfaces/: Streamable.hpp
primitive/types/: pos_t.hpp  return_t.hpp
res/: TODO.txt  test.db
res/.travis/: travis_install_cmake.sh
res/video/: README.md  mydb.db.tsv  reduce.py
res/work/gui/: definitions.txt
res/work/video/: .fuse_hidden000239bc0000004d  dbmodel.graphml  dbtables.graphml  model.db  model.sql
src/: main.cpp
src/cigmar/: base64.hpp  cigmar.hpp  filesystem.hpp  gui.hpp  hex.hpp  init.hpp  node.hpp  numbers.hpp  print.hpp  rll.hpp  sqlite.hpp  std.hpp  symbols.hpp  time.hpp  tree.hpp  unicode.hpp  unittests.hpp  utils.hpp
src/cigmar/classes/: AbstractString.hpp  Array.hpp  ArrayList.hpp  Char.hpp  HashMap.hpp  HashSet.hpp  Queue.hpp  Stack.hpp  StaticCollection.hpp  String.hpp  Timer.hpp  TreeMap.hpp  TreeSet.hpp  UnicodeString.hpp  array_t.hpp
src/cigmar/classes/exception/: Exception.hpp  IndexException.hpp
src/cigmar/classes/file/: Lines.hpp
src/cigmar/classes/file/writer/: Binary.hpp  Text.hpp
src/cigmar/classes/format/writer/: Tsv.hpp
src/cigmar/classes/math/: Fraction.hpp
src/cigmar/exception/: IndexException.hpp
src/cigmar/file/: Lines.hpp
src/cigmar/file/text/: read.hpp
src/cigmar/file/writer/: Binary.hpp  Text.hpp
src/cigmar/format/: Tsv.hpp  tsv.hpp
src/cigmar/gui/: backend.hpp  gui.cpp  gui.hpp  primitive.hpp  utils.hpp
src/cigmar/interfaces/: Collection.hpp  Comparable.hpp  CrossComparable.hpp  Hashable.hpp  Streamable.hpp
src/cigmar/math/: Fraction.hpp
src/cigmar/types/: pos_t.hpp
src/cigmar/utils/: Hasher.hpp  Initializable.hpp  character_utils.hpp  macro_utils.hpp  string_utils.hpp  trait_utils.hpp
src/cigmar/video/: Video.hpp  ffmpeg.cpp
src/cigmar/video/manager/: Database.hpp  DbVideo.cpp  DbVideo.hpp  Folder.cpp  Folder.hpp  Library.hpp  MultipleProperties.hpp  MultipleProperty.hpp  PropertyType.hpp  PropertyTypes.hpp  Report.hpp  RowMapping.hpp  TableRow.hpp  UniqueProperties.hpp  UniqueProperty.hpp  manager.hpp
src/cigmar/wip/: wip.hpp
src/cpp/: base64.cpp  cigmar.cpp  filesystem.cpp  filesystem_unix.cpp  filesystem_unix.inc  filesystem_windows.cpp  filesystem_windows.inc  main.cpp  unittests.cpp
src/cpp/file/text/: read.cpp
src/cpp/newtests/: testString.cpp
src/cpp/tests/: testString.cpp  testUnicodeString.cpp  test_HashMap.cpp  test_Queue.cpp  test_Stack.cpp  test_String.cpp  test_arrays.cpp  test_cigmar.cpp  test_encodings.cpp  test_filesystem.cpp  test_math.cpp  test_time.cpp  test_video.cpp
src/cpp/video/: Database.cpp  Library.cpp  Video.cpp  ffmpeg.cpp
src/libraries/: README.md
src/libraries/base64/: base64.hpp
src/libraries/dlfcn-win32/: dlfcn.c  dlfcn.h
src/libraries/sqlite/: README-sqlite-amalgamation-3210000.txt
src/libraries/whirlpool/: LICENSE.txt  Whirlpool.cpp
src/modules/: sqlite.cpp  sqlite.hpp
src/tests/: test_Queue.cpp  test_Stack.cpp  test_encodings.cpp  test_filesystem.cpp  test_video.cpp
src/video/: Database.hpp  Video.cpp  Video.hpp  database.hpp  ffmpeg.cpp  ffmpeg.hpp  utils.hpp  videomanager.cpp  videomanager.hpp
src/video/database/: Database.hpp
src/video/manager/: Database.cpp  Database.hpp  DbVideo.cpp  DbVideo.hpp  Folder.cpp  Folder.hpp  Library.cpp  Library.hpp  MultipleProperties.hpp  MultipleProperty.hpp  PropertyTypes.hpp  Report.hpp  RowMapping.hpp  TableRow.hpp  UniqueProperties.hpp  UniqueProperty.hpp  manager.hpp
tests/: test_HashMap.cpp  test_Path.cpp  test_Queue.cpp  test_Stack.cpp  test_TreeMap.cpp  test_arrays.cpp  test_cigmar.cpp  test_filesystem.cpp  test_time.cpp  test_video.cpp
video/: Video.hpp  ffmpeg.cpp  ffmpeg.hpp
